--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -102,7 +102,7 @@
                             <span>Controles</span>
                         </li>
                         <li class="@ViewBag.navbar.lstOptions[0].cadena">
-                            <a href="@Url.Action("Libros", "Admin")">
+                            <a href="@Url.Action("Index", "Admin")">
                                 <i class="fa fa-bar-chart"></i>
                                 <span class="font-bold">Dashboard</span>
                             </a>
