--- a/NubeBooks/Views/Admin/Index.cshtml
+++ b/NubeBooks/Views/Admin/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{ 
+﻿@using System.Globalization;
+@{ 
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 <div class="hbox hbox-auto-xs hbox-auto-sm" ng-init="app.settings.asideFolded=false;app.settings.asideDock=false;">
@@ -40,19 +41,19 @@
                     <div class="row row-sm text-center">
                         <div class="col-xs-6">
                             <div class="panel padder-v bg-info item">
-                                <div class="h1 text-white font-thin h1">15/01/2016</div>
+                                <div class="h1 text-white font-thin h1">@ViewBag.FechaConciliacion</div>
                                 <span class="text-muted text-xs">Última fecha de conciliación</span>
                             </div>
                         </div>
                         <div class="col-xs-6">
-                            <a href class="block panel padder-v bg-primary item">
-                                <span class="text-white font-thin h1 block">3.44</span>
+                            <a href="#" class="block panel padder-v bg-primary item">
+                                <span class="text-white font-thin h1 block">@ViewBag.TipoCambio</span>
                                 <span class="text-muted text-xs">Tipo de Cambio</span>
                             </a>
                         </div>
                         <div class="col-xs-6">
-                            <a href class="block panel padder-v item">
-                                <span class="font-thin h3 block">S/ 25,972.00</span>
+                            <a href="#" class="block panel padder-v item">
+                                <span class="font-thin h3 block">S/ @ViewBag.TotalSoles.ToString("N2", CultureInfo.InvariantCulture)</span>
                                 <span class="text-muted text-xs">SOLES</span>
                                 <span class="bottom text-left">
                                     <i class="fa fa-caret-up text-success m-l-sm"></i>
@@ -60,8 +61,8 @@
                             </a>
                         </div>
                         <div class="col-xs-6">
-                            <a href class="block panel padder-v item">
-                                <span class="font-thin h3 block">$ 14,900.00</span>
+                            <a href="#" class="block panel padder-v item">
+                                <span class="font-thin h3 block">$ @ViewBag.TotalDolares.ToString("N2", CultureInfo.InvariantCulture)</span>
                                 <span class="text-muted text-xs">DÓLARES</span>
                                 <span class="bottom text-left">
                                     <i class="fa fa-caret-down text-danger m-l-sm"></i>
@@ -71,14 +72,18 @@
                         <div class="col-xs-12 m-b-md">
                             <div class="r bg-light dker item hbox no-border">
                                 <div class="col w-xs v-middle hidden-md">
-                                    <div ng-init="d3_3=[60,40]" ui-jq="sparkline" ui-options="[60,40], {type:'pie', height:60,  tooltipFormat: '{{offset:offset}} ({{percent.1}}%)', tooltipValueLookups: {'offset': {0:'Dólares',1:'Soles'}}, sliceColors:['#fad733','#1a9c39']}" class="sparkline inline"></div>
+                                    @{ 
+                                        var pSoles = ViewBag.TotalConsolidado != 0 ? ViewBag.TotalSoles / ViewBag.TotalConsolidado : 0;
+                                        var pDolares = ViewBag.TotalConsolidado != 0 ? (ViewBag.TotalConsolidado - ViewBag.TotalSoles) / ViewBag.TotalConsolidado : 0;
+                                    }
+                                    <div ng-init="d3_3=[@pDolares,@pSoles]" ui-jq="sparkline" ui-options="[@pDolares,@pSoles], {type:'pie', height:60,  tooltipFormat: '{{offset:offset}} ({{percent.1}}%)', tooltipValueLookups: {'offset': {0:'Dólares',1:'Soles'}}, sliceColors:['#1a9c39','#fad733']}" class="sparkline inline"></div>
                                 </div>
                                 <div class="col dk padder-v r-r">
-                                    <div class="text-primary-dk font-thin h1"><span>S/ 75,142.00</span></div>
+                                    <div class="text-primary-dk font-thin h1"><span>S/. @ViewBag.TotalConsolidado.ToString("N2", CultureInfo.InvariantCulture)</span></div>
                                     <span class="text-muted text-xs">CONSOLIDADO</span>
                                 </div>
                                 <div class="col w-xs v-middle hidden-md bg-success dker">
-                                    <a href><i class="fa fa-money fa-3x"></i></a>
+                                    <a href="#"><i class="fa fa-money fa-3x"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -86,27 +91,7 @@
                 </div>
                 <div class="col-md-7">
                     <div class="panel wrapper">
-                        <label class="i-switch bg-warning pull-right" ng-init="showSpline=true">
-                            <input type="checkbox" ng-model="showSpline">
-                            <i></i>
-                        </label>
                         <h4 class="font-thin m-t-none m-b text-muted">Liquidez de la Empresa</h4>
-                        <div ui-jq="plot" ui-refresh="showSpline" ui-options="
-                             [
-                             { data [ [1,8],[2,13],[3,9],[4,10],[5,8],[6,11],[7,8.5],[8,10],[9,7.5],[10,8.5],[11,6],[12,12.5], ], label:'Soles', points { show true, radius 1}, splines { show true, tension 0.4, lineWidth 1, fill 0.8 } },
-                             { data [ [1,2],[2,7],[3,4.5],[4,3],[5,3.5],[6,5],[7,3],[8,4],[9,3],[10,4],[11,3],[12,7], ], label:'Dólares', points { show true, radius 1}, splines { show true, tension 0.4, lineWidth 1, fill 0.8 } }
-                             ],
-                             {
-                             colors ['#23b7e5', '#7266ba' ],
-                             series { shadowSize 3 },
-                             xaxis:{ font { color '#a1a7ac' } },
-                             yaxis:{ font { color '#a1a7ac' }, max:20 },
-                             grid { hoverable true, clickable true, borderWidth 0, color '#dce5ec' },
-                             tooltip true,
-                             tooltipOpts { content '%y.2' , defaultTheme false, shifts { x 10, y -25 } }
-                             }
-                             " style="height:246px">
-                        </div>
                     </div>
                 </div>
             </div>
@@ -114,24 +99,8 @@
             <!-- service -->
             <div class="panel hbox hbox-auto-xs no-border">
                 <div class="col wrapper">
-                    <i class="fa fa-circle-o text-info m-r-sm pull-right"></i>
                     <h4 class="font-thin m-t-none m-b-none text-primary-lt">Rentabilidad</h4>
                     <span class="m-b block text-sm text-muted">Ingresos vs Egresos</span>
-                    <div ui-jq="plot" ui-options="
-                         [
-                         { data [ [1,5500],[2,7500],[3,6000],[4,8000],[5,7500],[6,5000],[7,7800],[8,10000],[9,6200],[10,8000],[11,5800],[12,8000] ], lines { show true, lineWidth 1, fill:true, fillColor { colors [{opacity 0.2}, {opacity 0.8}] } } }
-                         ],
-                         {
-                         colors ['#e8eff0'],
-                         series { shadowSize 3 },
-                         xaxis:{ font { color '#a1a7ac' } },
-                         yaxis:{ font { color '#a1a7ac' } },
-                         grid { hoverable true, clickable true, borderWidth 0, color '#dce5ec' },
-                         tooltip true,
-                         tooltipOpts { content '%y' , defaultTheme false, shifts { x 10, y -25 } }
-                         }
-                         " style="height:240px">
-                    </div>
                 </div>
                 <div class="col wrapper-lg w-lg bg-light dk r-r">
                     <h4 class="font-thin m-t-none m-b">Ejecución de Presupuesto</h4>
@@ -159,97 +128,57 @@
             <div class="panel wrapper">
                 <div class="row">
                     <div class="col-md-6 b-r b-light no-border-xs">
-                        <a href class="text-muted pull-right text-lg"><i class="icon-arrow-right"></i></a>
+                        <a href="#" class="text-muted pull-right text-lg"><i class="icon-arrow-right"></i></a>
                         <h4 class="font-thin m-t-none m-b-md text-muted">Principales Clientes</h4>
                         <div class=" m-b">
                             <div class="m-b">
                                 <span class="label text-base bg-success pos-rlt m-r"> 22.5%</span>
-                                <a href>Empresa Cliente 1</a>
+                                <a href="#">Empresa Cliente 1</a>
                             </div>
                             <div class="m-b">
                                 <span class="label text-base bg-success pos-rlt m-r"> 13.0%</span>
-                                <a href>Empresa Cliente 2</a>
+                                <a href="#">Empresa Cliente 2</a>
                             </div>
                             <div class="m-b">
                                 <span class="label text-base bg-light pos-rlt m-r"> 8.50%</span>
-                                <a href>Empresa Cliente 3</a>
+                                <a href="#">Empresa Cliente 3</a>
                             </div>
                             <div class="m-b">
                                 <span class="label text-base bg-light pos-rlt m-r"> 6.00%</span>
-                                <a href>Empresa Cliente 4</a>
+                                <a href="#">Empresa Cliente 4</a>
                             </div>
                             <div class="m-b">
                                 <span class="label text-base bg-light pos-rlt m-r"> 4.50%</span>
-                                <a href>Empresa Cliente 5</a>
+                                <a href="#">Empresa Cliente 5</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 b-r b-light no-border-xs">
-                        <a href class="text-muted pull-right text-lg"><i class="icon-arrow-right"></i></a>
+                        <a href="#" class="text-muted pull-right text-lg"><i class="icon-arrow-right"></i></a>
                         <h4 class="font-thin m-t-none m-b-md text-muted">Principales Proveedores</h4>
                         <div class=" m-b">
                             <div class="m-b">
                                 <span class="label text-base bg-warning pos-rlt m-r"> 11.0%</span>
-                                <a href>Empresa Proveedora 1</a>
+                                <a href="#">Empresa Proveedora 1</a>
                             </div>
                             <div class="m-b">
                                 <span class="label text-base bg-warning pos-rlt m-r"> 10.5%</span>
-                                <a href>Empresa Proveedora 2</a>
+                                <a href="#">Empresa Proveedora 2</a>
                             </div>
                             <div class="m-b">
                                 <span class="label text-base bg-light pos-rlt m-r"> 5.50%</span>
-                                <a href>Empresa Proveedora 3</a>
+                                <a href="#">Empresa Proveedora 3</a>
                             </div>
                             <div class="m-b">
                                 <span class="label text-base bg-light pos-rlt m-r"> 4.00%</span>
-                                <a href>Empresa Proveedora 4</a>
+                                <a href="#">Empresa Proveedora 4</a>
                             </div>
                             <div class="m-b">
                                 <span class="label text-base bg-light pos-rlt m-r"> 3.50%</span>
-                                <a href>Empresa Proveedora 5</a>
+                                <a href="#">Empresa Proveedora 5</a>
                             </div>
                         </div>
                     </div>
-                    <!--
-                    <div class="col-md-6">
-                      <div class="row row-sm">
-                        <div class="col-xs-6 text-center">
-                          <div ui-jq="easyPieChart" ui-options="{
-                              percent: 75,
-                              lineWidth: 4,
-                              trackColor: '#e8eff0',
-                              barColor: '#7266ba',
-                              scaleColor: false,
-                              size: 115,
-                              rotate: 90,
-                              lineCap: 'butt'
-                            }" class="inline m-t">
-                            <div>
-                              <span class="text-primary h4">75%</span>
-                            </div>
-                          </div>
-                          <div class="text-muted font-bold text-xs m-t m-b">Work Done</div>
-                        </div>
-                        <div class="col-xs-6 text-center">
-                          <div ui-jq="easyPieChart" ui-options="{
-                              percent: 50,
-                              lineWidth: 4,
-                              trackColor: '#e8eff0',
-                              barColor: '#23b7e5',
-                              scaleColor: false,
-                              size: 115,
-                              rotate: 180,
-                              lineCap: 'butt'
-                            }" class="inline m-t">
-                            <div>
-                              <span class="text-info h4">50%</span>
-                            </div>
-                          </div>
-                          <div class="text-muted font-bold text-xs m-t m-b">Started</div>
-                        </div>
-                      </div>
-                    </div>
-                    -->
                 </div>
             </div>
             <!-- / tasks -->
